Fixed IsBusy indicator not appearing. Fixed obsolete cubes causing crash (ie., Ladder). Corrected and updated Structure detail. Increased allowable Asteroid field range to 50km. WIP on user editing position (Float is not easy to work with). Various code cleanup.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -235,6 +235,9 @@
     <Compile Include="Views\ControlFloatingObject.xaml.cs">
       <DependentUpon>ControlFloatingObject.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ControlPosition.xaml.cs">
+      <DependentUpon>ControlPosition.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WindowGenerateVoxelField.xaml.cs">
       <DependentUpon>WindowGenerateVoxelField.xaml</DependentUpon>
     </Compile>
@@ -285,6 +288,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ControlFloatingObject.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ControlPosition.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
