--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -56,11 +56,11 @@
       <HintPath>..\References\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Sandbox.CommonLib">
-      <HintPath>..\References\Sandbox.CommonLib.dll</HintPath>
+    <Reference Include="Sandbox.Common">
+      <HintPath>..\References\Sandbox.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Sandbox.CommonLib.XmlSerializers">
-      <HintPath>..\References\Sandbox.CommonLib.XmlSerializers.dll</HintPath>
+    <Reference Include="Sandbox.Common.XmlSerializers">
+      <HintPath>..\References\Sandbox.Common.XmlSerializers.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
