--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -44,13 +44,11 @@
       <HintPath>..\References\HelixToolkit.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
-    <Reference Include="Sandbox.CommonLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\References\Sandbox.CommonLib.dll</HintPath>
+    <Reference Include="Sandbox.Common">
+      <HintPath>..\References\Sandbox.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Sandbox.CommonLib.XmlSerializers, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\References\Sandbox.CommonLib.XmlSerializers.dll</HintPath>
+    <Reference Include="Sandbox.Common.XmlSerializers">
+      <HintPath>..\References\Sandbox.Common.XmlSerializers.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
