Updated latest SE binaries. Fixed unselecting item in main window. Fixed issue in calculating ore in super large asteroids. Split out my experimental code from test code. Rewrote the display of ship component breakdown, and fixed some of the calculations which were putting out wrong values (seriously undervalued).

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -127,6 +127,8 @@
     <Compile Include="Models\BindablePoint3DModel.cs" />
     <Compile Include="Models\BindableSize3DModel.cs" />
     <Compile Include="Models\BindableSize3DIModel.cs" />
+    <Compile Include="Models\OreAssetModel.cs" />
+    <Compile Include="Models\CubeAssetModel.cs" />
     <Compile Include="Models\VoxelMaterialAssetModel.cs" />
     <Compile Include="Models\GenerateVoxelDetailModel.cs" />
     <Compile Include="Models\GenerateVoxelModel.cs" />
