Updated binaries. Updated version prior to release. minor code cleanup. prep work for new controls.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -242,6 +242,9 @@
     <Compile Include="Views\ControlPosition.xaml.cs">
       <DependentUpon>ControlPosition.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ControlMultiple.xaml.cs">
+      <DependentUpon>ControlMultiple.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WindowGenerateVoxelField.xaml.cs">
       <DependentUpon>WindowGenerateVoxelField.xaml</DependentUpon>
     </Compile>
@@ -296,6 +299,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\ControlPosition.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ControlMultiple.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
