Added additional detail for unable to find SE issue. Adjusted Exception handling. Added missing Time detail for ship cubes. Added SharpDX assemblies for Texture handling. Added in Texture extraction code and displaying icons for ship components, parts, ore, etc. Moved some static called code to App Startup to increase responsiveness later in the app which in turn slows down initial start which shows in the splash screen (trade off. Has to run slow somewhere).

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Controls\BusyIndicator.cs" />
     <Compile Include="Controls\SortableGridViewColumn.cs" />
     <Compile Include="Controls\SortableListView.cs" />
+    <Compile Include="Converters\DDSConverter.cs" />
     <Compile Include="Converters\RangeRuleI.cs" />
     <Compile Include="Converters\RangeRuleD.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
