--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -75,6 +75,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TextureTests.cs" />
     <Compile Include="Experimental.cs" />
     <Compile Include="InteropTests.cs" />
     <Compile Include="VolumentricTests.cs" />
