Added custom Texture file reader which deosn't reply upon any crappy 32bit librarys or GPU and works way faster. Finialized the Item generator dialog.

--- a/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
@@ -76,6 +76,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SharpDXTextureUtil.cs" />
     <Compile Include="DxtUtil.cs" />
     <Compile Include="ImageTextureUtil.cs" />
     <Compile Include="OctreeQuantizer.cs" />
