--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -56,6 +56,9 @@
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\References\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\References\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Sandbox.Common">
       <HintPath>..\References\Sandbox.Common.dll</HintPath>
@@ -213,8 +216,10 @@
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Support\AppConstants.cs" />
+    <Compile Include="Support\DiagnosticsLogging4Net.cs" />
     <Compile Include="Support\ExceptionState.cs" />
     <Compile Include="Support\GlobalSettings.cs" />
+    <Compile Include="Support\DiagnosticsLogging.cs" />
     <Compile Include="Support\MeshHelper.cs" />
     <Compile Include="Support\PropertyChangedExtensions.cs" />
     <Compile Include="Support\RandomUtil.cs" />
@@ -420,7 +425,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Interop\SubtypeId.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SubtypeId.cs</LastGenOutput>
@@ -470,11 +477,6 @@
       <Project>{967d61a9-c8f0-4c2a-a784-6cda648ecb19}</Project>
       <Name>SEToolbox.ImageShaders</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SEToolboxUpdate\SEToolboxUpdate.csproj">
-      <Project>{0914d968-2b68-4fb4-8554-7238c7a78969}</Project>
-      <Name>SEToolboxUpdate</Name>
-      <Aliases>global</Aliases>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\copy.png" />
@@ -514,7 +516,8 @@
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
-  <Target Name="AfterBuild">
-  </Target>
   -->
+  <Target Name="AfterBuild">
+    <Copy SourceFiles="$(ProjectDir)..\SEToolboxUpdate\$(OutDir)\SEToolboxUpdate.exe" DestinationFolder="$(TargetDir)" />
+  </Target>
 </Project>
