--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Converters\NullImageConverter.cs" />
     <Compile Include="Converters\ResouceToImageConverter.cs" />
     <Compile Include="Converters\StringFormatMultiValueConverter.cs" />
+    <Compile Include="Interfaces\IColorDialog.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Interfaces\IMainView.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelBackgroundWorker.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelBuilder.cs" />
@@ -175,6 +178,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\ColorDialog.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Services\ColorDialogViewModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\CommandAction.cs" />
     <Compile Include="Services\CommandReference.cs" />
     <Compile Include="Services\DelegateCommand.cs" />
@@ -215,7 +224,6 @@
     <Compile Include="Services\WindowWrapper.cs" />
     <Compile Include="Models\ExplorerModel.cs" />
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
-    <Compile Include="Settings.cs" />
     <Compile Include="Support\AppConstants.cs" />
     <Compile Include="Support\DiagnosticsLogging4Net.cs" />
     <Compile Include="Support\ExceptionState.cs" />
