Added ship joiner, to rejoin a broken ship. Made component window non modal. Updated plans file.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -538,6 +538,9 @@
   <ItemGroup>
     <None Include="Resources\book_open2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\elements2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
