Updated version per previous release. WIP subsystem editor. Reworked loading of cube detail to alieviate load time. Corrected enum used for importing models and images that was allowing images to become asteroids. Fix to allow keyboard search on load dialog. Added progress bar for indicative processing. Corrections to menu appearance. Added placeholder for language selection. Added placeholder for resource report.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -541,6 +541,15 @@
   <ItemGroup>
     <None Include="Resources\elements2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flag_great_britain.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flag_china.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\document_pulse.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
