Removed unrelated test code. Rearranged 3d model code for clarity. Corrected for hidden asteroid ore allowing rare ore to show. Allowed ore selection to Asteroid file import.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Support\GlobalSettings.cs" />
     <Compile Include="Support\DiagnosticsLogging.cs" />
     <Compile Include="Support\MeshHelper.cs" />
+    <Compile Include="Support\Moddeling.cs" />
     <Compile Include="Support\PropertyChangedExtensions.cs" />
     <Compile Include="Support\RandomUtil.cs" />
     <Compile Include="Support\CodeplexReleases.cs" />
