Added progress bars to common long running operations. Added default cube to cube changer. WIP on resource report.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Models\ComponentListModel.cs" />
     <Compile Include="Models\ComponentItemModel.cs" />
     <Compile Include="Models\BindablePoint3DIModel.cs" />
+    <Compile Include="Models\ResourceReportModel.cs" />
     <Compile Include="Models\FrameworkBuildModel.cs" />
     <Compile Include="Models\SelectCubeModel.cs" />
     <Compile Include="Models\CubeItemModel.cs" />
@@ -247,6 +248,7 @@
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\ComponentListViewModel.cs" />
+    <Compile Include="ViewModels\ResourceReportViewModel.cs" />
     <Compile Include="ViewModels\SelectCubeViewModel.cs" />
     <Compile Include="ViewModels\FrameworkBuildViewModel.cs" />
     <Compile Include="ViewModels\FindApplicationViewModel.cs" />
@@ -297,6 +299,9 @@
     </Compile>
     <Compile Include="Views\ControlMeteor.xaml.cs">
       <DependentUpon>ControlMeteor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WindowResourceReport.xaml.cs">
+      <DependentUpon>WindowResourceReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WindowSelectCube.xaml.cs">
       <DependentUpon>WindowSelectCube.xaml</DependentUpon>
@@ -385,6 +390,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\ControlMeteor.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\WindowResourceReport.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
